--- a/TP4_ LinkedList/.project
+++ b/TP4_ LinkedList/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TP3_Archivos_LinkedList</name>
+	<name>likedList</name>
 	<comment></comment>
 	<projects>
 	</projects>
